bk_ida/gccida/g2/scope_die_for
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scope_die_for/src/dwarf2out.c:10034:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9575, "scope_die_for"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scope_die_for/src/dwarf2out.c:10038:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)rtl[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scope_die_for/src/dwarf2out.c:10047:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE && ( *( ( _BYTE *)&rtl[1] + 1) & 0x40) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scope_die_for/src/dwarf2out.c:10048:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9604, "scope_die_for"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/scope_die_for/src/obj/dwarf2out.o] Error 1
